<resources>
    <string name="app_name">ARvywhere</string>
    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">1048768318792059</string>
    <string name="fb_login_protocol_scheme">fb1048768318792059</string>



    <string name="hello">Hello</string>
    <string name="bye">Bye</string>
    <string name="image">Image</string>
    <string name="model">Model</string>
    <string name="loading">Loading</string>
    <string name="ar">AR</string>
    <string name="ar_image">AR Image</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="log_in_sign_up_via_google">Log In / Sign Up via Google</string>
    <string name="log_in">Log In</string>
    <string name="log_in_sign_up_via_facebook">Log In / Sign Up via Facebook</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>

    <string-array name="items">
        <item>cat.obj</item>
        <item>bear.obj</item>
        <item>dog.obj</item>
    </string-array>
</resources>
