<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#642f67"
    android:orientation="vertical"
    android:paddingStart="@dimen/_10sdp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="440dp"
        android:layout_height="358dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arverywhr" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:background="#ffffff"
        android:drawableStart="@drawable/ic_action_mailin"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_5sdp"
        app:layout_constraintBottom_toTopOf="@+id/pword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/pword"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="50dp"
        android:background="#ffffff"
        android:drawableStart="@drawable/ic_action_lockin"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/google"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="72dp"
        android:background="@drawable/roundedbutton"
        android:drawableLeft="@drawable/google"
        android:padding="@dimen/_5sdp"
        android:text="@string/log_in_sign_up_via_google"
        android:textAllCaps="false"
        android:textColor="#c62147"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pword" />

    <Button
        android:id="@+id/signup"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/roundedbutton"
        android:bottomLeftRadius="10dp"
        android:bottomRightRadius="10dp"
        android:text="@string/sign_up"
        android:textColor="#c62147"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pword"
        app:layout_constraintVertical_bias="0.476" />

<!--    <Button-->
<!--        android:id="@+id/signup"-->
<!--        android:layout_width="@dimen/_100sdp"-->
<!--        android:layout_height="@dimen/_35sdp"-->
<!--        android:layout_marginStart="80dp"-->
<!--        android:layout_marginTop="2dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:background="@drawable/roundedbutton"-->
<!--        android:bottomLeftRadius="10dp"-->
<!--        android:bottomRightRadius="10dp"-->
<!--        android:text="@string/sign_up"-->
<!--        android:textColor="#c62147"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/google"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="@id/login"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/pword"-->
<!--        app:layout_constraintVertical_bias="0.476" />-->

    <Button
        android:id="@+id/login"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/redroundedbutton"
        android:bottomLeftRadius="10dp"
        android:bottomRightRadius="10dp"
        android:text="@string/log_in"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/google"
        app:layout_constraintEnd_toStartOf="@+id/signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pword" />

    <Button
        android:id="@+id/facebook"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/roundedbutton"
        android:drawableLeft="@drawable/fb"
        android:padding="@dimen/_5sdp"
        android:paddingLeft="@dimen/_50sdp"
        android:text="@string/log_in_sign_up_via_facebook"
        android:textAllCaps="false"
        android:textColor="#c62147"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mail" />


</androidx.constraintlayout.widget.ConstraintLayout>