<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#642f67"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="409dp"
        android:layout_height="416dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arverywhr" />

    <EditText
        android:id="@+id/emailsu"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:autofillHints=""
        android:background="#ffffff"
        android:drawableStart="@drawable/ic_action_mailin"
        android:ems="10"
        android:hint="@string/email"
        android:padding="@dimen/_5sdp"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/passwordsu"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:background="#ffffff"
        android:drawableStart="@drawable/ic_action_lockin"
        android:ems="10"
        android:hint="@string/password"
        android:padding="@dimen/_5sdp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailsu" />

    <Button
        android:id="@+id/signup2"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="8dp"
        android:text="@string/sign_up"
        android:textColor="#c62147"
        android:background="@drawable/roundedbutton"
        android:bottomLeftRadius="10dp"
        android:bottomRightRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordsu"
        app:layout_constraintVertical_bias="0.142">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>