<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar

        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="Your Library"
        app:titleTextColor="#fff" />

<!--    <RelativeLayout-->
<!--        android:id="@+id/relativeLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:background="@drawable/bg"-->
<!--        tools:ignore="MissingConstraints"/>-->


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_weight="1"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_margin="14dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="#642f67"
        app:cardCornerRadius="22dp"
        app:contentPadding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="100dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="10sp"
            android:contentDescription="@string/todo"
            android:src="@drawable/image">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/image"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:textStyle="bold">

        </TextView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
    android:id="@+id/uploadModel"
    android:layout_weight="1"
    android:layout_width="185dp"
    android:layout_height="185dp"
    android:layout_margin="14dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="16dp"
    android:layout_marginBottom="32dp"
    app:cardBackgroundColor="#c62147"
    app:cardCornerRadius="22dp"
    app:contentPadding="12dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/cardView2"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="0sp"
        android:src="@drawable/model"
        android:contentDescription="@string/todo">

    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:text="@string/model"
        android:textColor="#ffffff"
        android:textSize="32sp"
        android:textStyle="bold">

    </TextView>

    <include
        android:id="@+id/include"
        layout="@layout/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/architecture"
        android:layout_weight="1"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_margin="14dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        app:cardBackgroundColor="#c62147"
        app:cardCornerRadius="22dp"
        app:contentPadding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="0sp"
            android:contentDescription="@string/todo"
            android:src="@drawable/model">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="Architecture"
            android:textColor="#ffffff"
            android:textSize="26sp"
            android:textStyle="bold">

        </TextView>

        <include
            android:id="@+id/include"
            layout="@layout/content_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>